--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.2",
     "framer-motion": "^10.2.1",
     "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
